# book

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .obsidianignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  debug_flags.c  debug_split.c  skills-lock.json  todo_app.db-shm  todo_app.db-wal
engineering/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements-benchmark.txt
engineering/apps/: CMakeLists.txt  project.private.config.json
engineering/apps/common/: CMakeLists.txt  menu.c  menu.h  terminal.c  terminal.h
engineering/apps/daily-digest/: .env.example  README.md  docker-compose.yml
engineering/apps/db_driver/: README.md  __init__.py  cli.py  connection.py  cursor.py  examples.py  exceptions.py  pool.py  test_driver.py
engineering/apps/games/: CMakeLists.txt  README.md  project.config.json  project.private.config.json
engineering/apps/kbase/: CMakeLists.txt  cmd_embed.c  cmd_index.c  cmd_search.c  main.c
engineering/apps/todo-app/: CMakeLists.txt  main.c  todo_calendar.c  todo_calendar.h  todo_change.c  todo_change.h  todo_db.c  todo_db.h  todo_field.c  todo_field.h  todo_handler.c  todo_handler.h  todo_migration.c  todo_migration.h  todo_model.c  todo_model.h  todo_plan.c  todo_plan.h  todo_stats.c  todo_stats.h  todo_view.c  todo_view.h
engineering/apps/tools/: CMakeLists.txt
engineering/apps/vdb_cli/: CMakeLists.txt  main.c  vdb_cli.c  vdb_cli.h
engineering/apps/web/: package.json
engineering/cmake/: ProjectUtils.cmake
engineering/docs/: architecture-diagrams.md  btree-implementation.md  btree-vs-lsm.md  buffer-pool-algorithm-comparison.md  buffer-pool-deep-dive.md  bug-fix-log.md  coverage-baseline.json  coverage-policy.md  hnsw-algorithm-deep-dive.md  integration-test-plan.md  interview-qa-database.md  jit-research.md  module-architecture-detail.md  mvcc-deep-dive.md  mvcc-mechanism.md  mvcc-mysql-vs-postgresql.md  sql-executor-status.md  wal-design-tradeoffs.md  wal-persistence.md
engineering/docs/index/: README.md
engineering/include/: common.h  compare.h
engineering/include/algo/: CMakeLists.txt
engineering/include/common/: base_err.h  base_log.h
engineering/include/db/: backup.h  bgworker.h  btreeam.h  buf.h  catalog.h  db_err.h  db_server.h  disk.h  doc_engine.h  errors.h  fault_inject.h  graph_engine.h  guc.h  heapam.h  index_mvcc.h  initdb.h  kv.h  kv_engine.h  lock.h  log.h  metrics.h  mm_pool.h  mm_storage.h  mvcc_hot.h  optimistic.h  optimizer_cost.h  page.h  pg_ctl.h  rag_executor.h  rel.h  spatial_engine.h  storage_engine.h  stream_engine.h  structured_log.h  table.h  ts_engine.h  txn.h  vdb_api.h  vector_engine.h  wal.h  (+1 more)
engineering/include/ds/: trie.h
engineering/include/kbase/: kbase_index.h  kbase_search.h  kbase_utils.h
engineering/include/rag/: multimodal_chunk.h  rag_err.h
engineering/include/redis/: redis_adlist.h  redis_sds.h  redis_skiplist.h  redis_zmalloc.h
engineering/include/self_made/: common.h  data_type.h
engineering/include/self_made_cpp/: trie.h
engineering/include/tree_index/: art.h  bptree.h  btree.h  radix_tree.h  rtree.h  skip_list.h  tree_page.h  ttree.h
engineering/rag/: CMakeLists.txt  README.md  tasks.md
engineering/rag/diagrams/: activity-diagram.excalidraw.json  architecture.excalidraw.json  class-diagram.excalidraw.json  collaboration-diagram.excalidraw.json  component.excalidraw.json  data-flow.excalidraw.json  deployment.excalidraw.json  object-diagram.excalidraw.json  sequence-indexing.excalidraw.json  sequence-query.excalidraw.json  state-diagram.excalidraw.json  system-overview.excalidraw.json  use-case.excalidraw.json
engineering/rag/docs/: 01-data-layer.md  02-api-design.md  03-config-design.md  04-model-service.md  05-chunking-strategy.md  06-retrieval-strategy.md  07-prompt-engineering.md  08-observability.md  09-error-handling.md  10-engineering.md  multimodal-rag-implementation.md  ollama-integration.md  rag-evaluation.md  uml-design.md
engineering/scripts/: rename-ids-run.py  rename-ids.py
engineering/scripts/coverage/: aggregate-gcov.py  aggregate.py  badge.py  check-threshold.py  compare.py  lcov-aggregate.sh  run.sh  test-summary.py
engineering/scripts/metrics/: collect-metrics.py
engineering/sdk/c/: CMakeLists.txt
engineering/sdk/python/: README.md  example.py
engineering/src/: CMakeLists.txt
engineering/src/algo-prod/: CMakeLists.txt
engineering/src/cpp/: CMakeLists.txt  README.md
engineering/src/db/: CMakeLists.txt
engineering/src/ds/: CMakeLists.txt  trie.cpp
engineering/src/kbase/: CMakeLists.txt  kbase_index.c  kbase_search.c
engineering/src/redis/: CMakeLists.txt  README.md  redis_adlist.c  redis_sds.c  redis_skiplist.c  sdsalloc.h  util.h
engineering/test/: CMakeLists.txt
engineering/test/algo/: CMakeLists.txt
engineering/test/apps/: CMakeLists.txt  test_common_menu.cpp  test_common_terminal.cpp  test_todo_simple.cpp
engineering/test/db/: CMakeLists.txt  sla_test.cpp
engineering/test/ds/: CMakeLists.txt
engineering/test/fuzz/: CMakeLists.txt  page_fuzzer.cpp  sql_fuzzer.cpp  wal_fuzzer.cpp
engineering/test/index/: CMakeLists.txt
engineering/test/kbase/: CMakeLists.txt  (+7 more)
engineering/tools/: CMakeLists.txt
learning/: CMakeLists.txt  README.md  r25-progress.md  r30-progress.md  r33-progress.md  r35-progress.md  r36-progress.md  r37-progress.md  r38-progress.md
learning/algo-c/: CMakeLists.txt
learning/articles/: csdn-drafts.md
learning/blog/: lock.md  双色球历史开奖记录.md  毛坯房装修全攻略.md
learning/code-solutions/: CMakeLists.txt
learning/include/: README.md
learning/interview/: Impressive_question.txt  interview.txt  project.txt  resume.md  skills_need_for_interview.txt  target_company
learning/misc/: lines_of_code.txt
learning/notes/: .sync-pipeline-state.json  README.md  ds-art.md  ds-radix-tree.md  ds-rtree.md  ds-skiplist.md  ds-ttree.md
learning/progress/: r26-progress.md  r32-progress.md
learning/scaffold/: R5-HANDOFF.md
learning/scripts/: sync-learn-deep.sh  sync-pipeline.py
learning/tools/: pycharm.txt  windo.txt
third_part/sqlite3/: CMakeLists.txt
(+5384 files in other folders)
