# 数据库内核模块
# 参考 PostgreSQL 架构的模块化分层设计
#
# 层次结构：
#   core/       - 核心基础设施（errors, log, guc）
#   storage/    - 存储层（Buffer Pool, Catalog, WAL, 各引擎）
#   index/      - 索引实现
#   parser/     - 语法解析层
#   optimizer/  - 查询优化层
#   rewrite/    - 查询重写层
#   validator/  - 校验层
#   executor/   - 执行层
#   utils/      - 工具库

# ========================================================================
# 核心模块（errors, log, guc）
# ========================================================================
add_subdirectory(core)

# 共识模块（Raft 共识算法，Phase11 引入）
add_subdirectory(consensus)

# ========================================================================
# 存储层（Buffer Pool, Catalog, WAL, Transaction, 各引擎）
# ========================================================================
add_subdirectory(storage)

# ========================================================================
# 访问方法抽象层（Index AM 框架）
# ========================================================================
add_subdirectory(access)

# ========================================================================
# 索引子系统（B+Tree, Hash, Bitmap, Vector Index）
# ========================================================================
add_subdirectory(index)

# ========================================================================
# 解析层（SQL, GQL 语法解析）
# ========================================================================
add_subdirectory(parser)

# ========================================================================
# SQL 引擎层（解析器 + 计划器 + 执行器）
# ========================================================================
add_subdirectory(sql)

# ========================================================================
# 优化层（规则优化, 代价估算, 执行计划生成）
# ========================================================================
add_subdirectory(optimizer)

# ========================================================================
# 重写层（查询重写）
# ========================================================================
add_subdirectory(rewrite)

# ========================================================================
# 校验层（约束检查, 语义分析）
# ========================================================================
add_subdirectory(validator)

# ========================================================================
# 执行层（SQL/Graph 执行器）
# ========================================================================
add_subdirectory(executor)

# ========================================================================
# 引擎层（多模态引擎统一直调接口）
# ========================================================================
add_subdirectory(engine)

# ========================================================================
# 协议层（非 SQL 协议）
# ========================================================================
add_subdirectory(protocol)

# ========================================================================
# 工具库（向量索引依赖的数据结构）
# ========================================================================
add_subdirectory(utils)

# ========================================================================
# 其他模块
# ========================================================================

# 事务管理器（MVCC 事务管理）
add_subdirectory(txn)

# 并发控制（MVCC 多版本并发控制）
add_subdirectory(concurrency)

# 主从复制（流复制、故障切换）
add_subdirectory(replication)

# 分片支持（Hash/Range 分片、路由层）
add_subdirectory(sharding)

# 订阅模块（CDC 变更数据捕获）
add_subdirectory(subscription)

# 对账模块（账本、账务一致性）
add_subdirectory(ledger)

# 老化模块（冷热数据分层、自动清理）
add_subdirectory(aging)

# 视图（普通视图、物化视图）
add_subdirectory(view)

# 触发器（行级/语句级触发器）
add_subdirectory(trigger)

# 后台任务调度器
add_subdirectory(bgworker)

# 性能优化（SIMD、并行查询、缓存）
add_subdirectory(performance)

# CLI 交互界面（SQL Shell + 向量 CLI）
add_subdirectory(cli)

# API 层（REST API + 向量 API）
add_subdirectory(api)

# ========================================================================
# 工具模块（系统表管理、数据导入导出、统计信息、执行计划分析、空间回收、索引重建）
# ========================================================================
add_subdirectory(tools)
